# Chaos_Blackjack

./: .env.example  .gitignore  README.md  UX_design.md  environment.yml  pyproject.toml
chaos_blackjack/: __init__.py
chaos_blackjack/ai/: __init__.py  chaos_agent.py  chaos_policy.py  chaos_scheduler.py  gemini_llm.py  permission_validator.py  permissions_loader.py  pipeline.py  prompts_loader.py
chaos_blackjack/ai/permissions/: easy.json  hard.json
chaos_blackjack/ai/prompts/: aggressive.txt  (+1 more)
chaos_blackjack/contracts/: __init__.py  ai_action.py  items.py  llm.py  observation.py  rules.py
chaos_blackjack/core/: __init__.py  game_loop.py  game_state.py  run_state.py  save_manager.py
chaos_blackjack/events/: __init__.py  dispatcher.py  event.py
chaos_blackjack/items/: __init__.py  danger_radar.py  fate_oracle.py  hole_card_hacker.py  peek.py  shield.py  swap.py
chaos_blackjack/logic/: __init__.py  run_end_policy.py
chaos_blackjack/registry/: __init__.py  loader.py  registry.py
chaos_blackjack/rules/: __init__.py  modifiers.py  rule_engine.py
chaos_blackjack/saves/: first_test.json
chaos_blackjack/ui/: __init__.py  descriptions.py  feedback.py  formatting.py  session.py
cli/: main.py
scripts/: debug_gemini.py  debug_smoke.py  list_gemini_models.py
tests/: conftest.py  test_ai_action.py  test_chaos_policy_scheduler.py  test_formatting.py  test_game_loop_smoke.py  test_items.py  test_permissions.py  test_pipeline.py  test_registry.py  test_rule_engine.py  test_run_end_policy.py  test_save_manager.py  test_session_mvp.py  test_snapshot_roundtrip.py
(+8 files in other folders)
