[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-blackjack"
version = "0.1.0"
description = "Rule-perturbation blackjack with a Chaos AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos_blackjack*"]

[tool.setuptools.package-data]
chaos_blackjack = ["py.typed"]
