[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-blackjack"
version = "0.2.0"
description = "Rule-perturbation blackjack with a Chaos AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos_blackjack*"]

[tool.setuptools.package-data]
chaos_blackjack = ["py.typed"]
"chaos_blackjack.ai" = ["prompts/*.txt", "permissions/*.json"]
